[package]
name = "stego"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
image = { package = "image", version = "0.24.2" }
float-ord = "0.3.2"
#turbojpeg = {version = "0.4", features = ["image"]}
