[package]
name = "stego"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
image = { package = "image", version = "0.24.2", features = ["jpeg"] }
float-ord = "0.3.2"
jpeg-encoder = "0.5.1"
